News UAT/force-app/main/default/objects/Activity/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <inlineHelpText>&#39;Type&#39; field cannot be used in workflows or formulas therefore field created to allow reporting.
Workflow rules will update this field. This field does not need to be displayed on screen.</inlineHelpText>
    <label>Activity Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>