News UAT/force-app/main/default/objects/Activity/fields/Actual_End__c.field-meta.xml
<CustomField>
    <fullName>Actual_End__c</fullName>
    <description>Actual Activity End Date-Time</description>
    <label>Actual End</label>
    <type>DateTime</type>
</CustomField>