News UAT/force-app/main/default/objects/Activity/fields/Assigned_Campaign_Manager__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Campaign_Manager__c</fullName>
    <description>@NXRIII-75</description>
    <formula>(Campaign_Order__r.Assigned_Campaign_Manager__r.FirstName)&amp;&quot; &quot;&amp;(Campaign_Order__r.Assigned_Campaign_Manager__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Campaign Manager</label>
    <type>Text</type>
</CustomField>