News UAT/force-app/main/default/objects/Activity/fields/Assigned_Fulfillment_Owner__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Fulfillment_Owner__c</fullName>
    <description>This field will be used by orchestrator task report</description>
    <formula>IF(CSPOFA__Orchestration_Step__r.CSPOFA__Orchestration_Process__r.Product_Order__c &lt;&gt; null &amp;&amp; CSPOFA__Orchestration_Step__r.CSPOFA__Orchestration_Process__r.Product_Order__r.Assigned_Fulfilment_Owner__c &lt;&gt; null, (CSPOFA__Orchestration_Step__r.CSPOFA__Orchestration_Process__r.Product_Order__r.Assign_Fulfilment_Owner_Name__c),IF(CSPOFA__Orchestration_Step__r.CSPOFA__Orchestration_Process__r.Creative__c &lt;&gt; null &amp;&amp; CSPOFA__Orchestration_Step__r.CSPOFA__Orchestration_Process__r.Creative__r.Product_Order__r.Assigned_Fulfilment_Owner__c &lt;&gt; null,(CSPOFA__Orchestration_Step__r.CSPOFA__Orchestration_Process__r.Creative__r.Product_Order__r.Assign_Fulfilment_Owner_Name__c),&#39;&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Fulfillment Owner</label>
    <type>Text</type>
</CustomField>