News UAT/force-app/main/default/objects/Activity/fields/Assigned_Social_Owner__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Social_Owner__c</fullName>
    <description>@NXRIII-75</description>
    <formula>(Product_Order__r.Assigned_Social_Owner__r.FirstName)&amp;&quot; &quot;&amp;( Product_Order__r.Assigned_Social_Owner__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Social Owner</label>
    <type>Text</type>
</CustomField>