News UAT/force-app/main/default/objects/Activity/fields/Call_Answered__c.field-meta.xml
<CustomField>
    <fullName>Call_Answered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Answered</label>
    <type>Checkbox</type>
</CustomField>