News UAT/force-app/main/default/objects/Activity/fields/Call_End__c.field-meta.xml
<CustomField>
    <fullName>Call_End__c</fullName>
    <description>Call End provided by Genesys</description>
    <label>Call End</label>
    <type>DateTime</type>
</CustomField>