News UAT/force-app/main/default/objects/Activity/fields/Call_ID__c.field-meta.xml
<CustomField>
    <fullName>Call_ID__c</fullName>
    <description>The Conn ID provided by Genesys</description>
    <label>Interaction ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>