News UAT/force-app/main/default/objects/Activity/fields/Call_Recording_Links__c.field-meta.xml
<CustomField>
    <fullName>Call_Recording_Links__c</fullName>
    <formula>HYPERLINK(&quot;https://cloud12.contact-world.net/callcentre/callAnalytics/playaudiomatch.aspx?guid=&quot;&amp;CallObject&amp;&quot;&amp;start=0&amp;matched=&quot;, &quot;Call Recording&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Recording Links</label>
    <type>Text</type>
</CustomField>