News UAT/force-app/main/default/objects/Activity/fields/Call_Recording_URL__c.field-meta.xml
<CustomField>
    <fullName>Call_Recording_URL__c</fullName>
    <description>URL to Call Recording</description>
    <formula>HYPERLINK(&quot;http://verappprod01/ultra/DynaAsp/vCRMQuery.aspx?STime=01/01/2010%2000:00:00&amp;ETime=01/01/2099%2000:00:00&amp;world=ETM&amp;switchcallid=&quot; &amp; Call_ID__c , &quot;Open Call Recording&quot;, &quot;_blank&quot;)</formula>
    <label>Call Recording URL</label>
    <type>Text</type>
</CustomField>