News UAT/force-app/main/default/objects/Activity/fields/Call_Start__c.field-meta.xml
<CustomField>
    <fullName>Call_Start__c</fullName>
    <description>Call Start from Genesys</description>
    <label>Call Start</label>
    <type>DateTime</type>
</CustomField>