News UAT/force-app/main/default/objects/Activity/fields/Campaign_Membership_Final_Response__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Membership_Final_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Pilot of SFDC/Marketo</description>
    <label>Campaign Membership Final Response</label>
    <type>Checkbox</type>
</CustomField>