News UAT/force-app/main/default/objects/Activity/fields/Campaign_Order__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>@NXRIII-75</description>
    <label>Campaign Order Name</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>