News UAT/force-app/main/default/objects/Activity/fields/Campaign_Order_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Order_Name__c</fullName>
    <description>this will capture the Campaign Order Name from Product Order or Creative or directly from Campaign Order for Reports</description>
    <formula>IF(CSPOFA__Orchestration_Step__r.CSPOFA__Orchestration_Process__r.Product_Order__c &lt;&gt; null, CSPOFA__Orchestration_Step__r.CSPOFA__Orchestration_Process__r.Product_Order__r.Order__r.Name  , IF(CSPOFA__Orchestration_Step__r.CSPOFA__Orchestration_Process__r.Creative__c &lt;&gt; null, CSPOFA__Orchestration_Step__r.CSPOFA__Orchestration_Process__r.Creative__r.Product_Order__r.Order__r.Name, IF( CSPOFA__Orchestration_Step__r.CSPOFA__Orchestration_Process__r.Order__c &lt;&gt; null,  CSPOFA__Orchestration_Step__r.CSPOFA__Orchestration_Process__r.Order__r.Name , &#39;&#39;) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Order Name</label>
    <type>Text</type>
</CustomField>