News UAT/force-app/main/default/objects/Activity/fields/Campaign_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Order_Status__c</fullName>
    <description>This field is created to capture the Campaign Order Status.</description>
    <formula>IF(  CSPOFA__Orchestration_Step__r.CSPOFA__Orchestration_Process__r.Product_Order__c &lt;&gt; null, CSPOFA__Orchestration_Step__r.CSPOFA__Orchestration_Process__r.Product_Order__r.Campaign_Status__c,  IF( CSPOFA__Orchestration_Step__r.CSPOFA__Orchestration_Process__r.Creative__c &lt;&gt; null,  CSPOFA__Orchestration_Step__r.CSPOFA__Orchestration_Process__r.Creative__r.Product_Order__r.Campaign_Status__c ,  IF(CSPOFA__Orchestration_Step__r.CSPOFA__Orchestration_Process__r.Order__c &lt;&gt; null,  TEXT(CSPOFA__Orchestration_Step__r.CSPOFA__Orchestration_Process__r.Order__r.Status__c) , &#39;&#39;)  ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Order Status</label>
    <type>Text</type>
</CustomField>