News UAT/force-app/main/default/objects/Activity/fields/Campaign_Response_Comment__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Response_Comment__c</fullName>
    <label>Campaign Response Comment</label>
    <type>TextArea</type>
</CustomField>