News UAT/force-app/main/default/objects/Activity/fields/Campaign_Response_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Response_Sub_Type__c</fullName>
    <label>Campaign Response Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Request Call Back - Same Agent</fullName>
            </value>
            <value>
                <fullName>Request More Information</fullName>
            </value>
            <value>
                <fullName>Request Call Back - Any Agent</fullName>
            </value>
            <value>
                <fullName>Agent Rejected</fullName>
            </value>
            <value>
                <fullName>Do Not Contact Again</fullName>
            </value>
            <value>
                <fullName>Financial Constraints</fullName>
            </value>
            <value>
                <fullName>Inappropriate Timing</fullName>
            </value>
            <value>
                <fullName>Poor Response</fullName>
            </value>
            <value>
                <fullName>Referred to Credit</fullName>
            </value>
            <value>
                <fullName>Retention: Ad Successful</fullName>
            </value>
            <value>
                <fullName>Too Expensive</fullName>
            </value>
            <value>
                <fullName>Unsuitable Offer</fullName>
            </value>
            <value>
                <fullName>Use Competitor Products</fullName>
            </value>
            <value>
                <fullName>Use Other NEWS Ltd Products</fullName>
            </value>
            <value>
                <fullName>Will Not Attend</fullName>
            </value>
            <value>
                <fullName>Busy</fullName>
            </value>
            <value>
                <fullName>Left Message</fullName>
            </value>
            <value>
                <fullName>No Answer</fullName>
            </value>
            <value>
                <fullName>No Longer in Business</fullName>
            </value>
            <value>
                <fullName>Phone Disconnected</fullName>
            </value>
            <value>
                <fullName>Unable To Contact</fullName>
            </value>
            <value>
                <fullName>Wrong Phone Number</fullName>
            </value>
            <value>
                <fullName>Booking Pending</fullName>
            </value>
            <value>
                <fullName>Create Opportunity</fullName>
            </value>
            <value>
                <fullName>Create Sales Order</fullName>
            </value>
            <value>
                <fullName>Will Attend</fullName>
            </value>
            <value>
                <fullName>Contact Plan</fullName>
            </value>
            <value>
                <fullName>Call Attempt Limit Reached</fullName>
            </value>
            <value>
                <fullName>Retention - Closed and Re-added</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>