News UAT/force-app/main/default/objects/Activity/fields/Campaign_Response_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Response_Type__c</fullName>
    <description>For Testing/Pilot of SFDC/Marketo solution design</description>
    <label>Campaign Response Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>