News UAT/force-app/main/default/objects/Activity/fields/cirrusadv__Day_Activity_Created__c.field-meta.xml
<CustomField>
    <fullName>cirrusadv__Day_Activity_Created__c</fullName>
    <formula>CASE( MOD(  DATEVALUE(CreatedDate)  - DATE(1900, 1, 7), 7), 0, &quot;1 Sunday&quot;, 1, &quot;2 Monday&quot;, 2, &quot;3 Tuesday&quot;, 3,&quot;4 Wednesday&quot;, 4, &quot;5 Thursday&quot;, 5, &quot;6 Friday&quot;, 6, &quot;7 Saturday&quot;,&quot;Error&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day Activity Created</label>
    <type>Text</type>
</CustomField>