News UAT/force-app/main/default/objects/Activity/fields/cirrusadv__Email_Opened__c.field-meta.xml
<CustomField>
    <fullName>cirrusadv__Email_Opened__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Opened</label>
    <type>Checkbox</type>
</CustomField>