News UAT/force-app/main/default/objects/Activity/fields/cirrusadv__Hour__c.field-meta.xml
<CustomField>
    <fullName>cirrusadv__Hour__c</fullName>
    <formula>FLOOR ( MOD( CreatedDate - ($System.OriginDateTime + 5/24),1) *24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>