News UAT/force-app/main/default/objects/Activity/fields/cirrusadv__Hour_Sent__c.field-meta.xml
<CustomField>
    <fullName>cirrusadv__Hour_Sent__c</fullName>
    <formula>FLOOR ( MOD( CreatedDate - ($System.OriginDateTime),1) *24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The hour of the day that the email was sent. (in UTC)</inlineHelpText>
    <label>Hour Sent (UTC)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>