News UAT/force-app/main/default/objects/Activity/fields/cirrusadv__Last_Reply__c.field-meta.xml
<CustomField>
    <fullName>cirrusadv__Last_Reply__c</fullName>
    <inlineHelpText>The date the email was most recently replied to.</inlineHelpText>
    <label>Last Reply</label>
    <type>DateTime</type>
</CustomField>