News UAT/force-app/main/default/objects/Activity/fields/cirrusadv__Num_of_Opens__c.field-meta.xml
<CustomField>
    <fullName>cirrusadv__Num_of_Opens__c</fullName>
    <inlineHelpText>Number of times this tracked email has been opened. (Cirrus Insight)</inlineHelpText>
    <label># of Opens</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>