News UAT/force-app/main/default/objects/Activity/fields/cirrusadv__Reply_Received__c.field-meta.xml
<CustomField>
    <fullName>cirrusadv__Reply_Received__c</fullName>
    <formula>cirrusadv__Num_of_Replies__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reply Received</label>
    <type>Checkbox</type>
</CustomField>