News UAT/force-app/main/default/objects/Activity/fields/cirrusadv__Time_to_Open__c.field-meta.xml
<CustomField>
    <fullName>cirrusadv__Time_to_Open__c</fullName>
    <formula>(cirrusadv__First_Opened__c - CreatedDate) * 24 * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How long did this email take to open? (in minutes)</inlineHelpText>
    <label>Time to Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>