News UAT/force-app/main/default/objects/Activity/fields/Comments_Summary__c.field-meta.xml
<CustomField>
    <fullName>Comments_Summary__c</fullName>
    <description>Driven by Workflow</description>
    <inlineHelpText>Show the first 100 characters of the Comments</inlineHelpText>
    <label>Comments Summary</label>
    <type>TextArea</type>
</CustomField>