News UAT/force-app/main/default/objects/Activity/fields/Contact_Plan__c.field-meta.xml
<CustomField>
    <fullName>Contact_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contact Plan Interaction Log</description>
    <inlineHelpText>Select this if you want to log a Contact Plan for the Customer in question</inlineHelpText>
    <label>Contact Plan</label>
    <type>Checkbox</type>
</CustomField>