News UAT/force-app/main/default/objects/Activity/fields/Created_via_Salesforce1__c.field-meta.xml
<CustomField>
    <fullName>Created_via_Salesforce1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to track records created via Salesforce1</description>
    <label>Created via Salesforce1</label>
    <type>Checkbox</type>
</CustomField>