News UAT/force-app/main/default/objects/Activity/fields/CreatedByUser__c.field-meta.xml
<CustomField>
    <fullName>CreatedByUser__c</fullName>
    <description>Tasks Created By Users</description>
    <formula>IF(CreatedById = $User.Id, 1, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreatedByUser</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>