News UAT/force-app/main/default/objects/Activity/fields/Creative__c.field-meta.xml
<CustomField>
    <fullName>Creative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To Populate Product Order lookup field while a Task is created from Creative.
@NXRIII-75</description>
    <label>Creative</label>
    <referenceTo>Creative__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>