News UAT/force-app/main/default/objects/Activity/fields/CS_GT__Associated_Group__c.field-meta.xml
<CustomField>
    <fullName>CS_GT__Associated_Group__c</fullName>
    <label>Associated Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>