News UAT/force-app/main/default/objects/Activity/fields/CSPOFA__Process_Step_link__c.field-meta.xml
<CustomField>
    <fullName>CSPOFA__Process_Step_link__c</fullName>
    <label>Process Step link</label>
    <length>50</length>
    <type>Text</type>
</CustomField>