News UAT/force-app/main/default/objects/Activity/fields/Customer_Tier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Tier__c</fullName>
    <description>This field will be used by orchestrator task report</description>
    <formula>IF(CSPOFA__Orchestration_Step__r.CSPOFA__Orchestration_Process__r.Order__c &lt;&gt; null, CSPOFA__Orchestration_Step__r.CSPOFA__Orchestration_Process__r.Order__r.Customer_Tier__c,IF(CSPOFA__Orchestration_Step__r.CSPOFA__Orchestration_Process__r.Product_Order__c &lt;&gt; null, CSPOFA__Orchestration_Step__r.CSPOFA__Orchestration_Process__r.Product_Order__r.Customer_Tier__c,CSPOFA__Orchestration_Step__r.CSPOFA__Orchestration_Process__r.Creative__r.Product_Order__r.Customer_Tier__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Tier</label>
    <type>Text</type>
</CustomField>