News UAT/force-app/main/default/objects/Activity/fields/Days_on_Setup__c.field-meta.xml
<CustomField>
    <fullName>Days_on_Setup__c</fullName>
    <description>This field will capture the Associated Product Order or Creatives - Campaign Order Days On Set Up Field for Report Purpose</description>
    <formula>IF(CSPOFA__Orchestration_Step__r.CSPOFA__Orchestration_Process__r.Product_Order__c &lt;&gt; null,  CSPOFA__Orchestration_Step__r.CSPOFA__Orchestration_Process__r.Product_Order__r.Days_on_Setup__c  , IF(CSPOFA__Orchestration_Step__r.CSPOFA__Orchestration_Process__r.Creative__c &lt;&gt; null, CSPOFA__Orchestration_Step__r.CSPOFA__Orchestration_Process__r.Creative__r.Product_Order__r.Days_on_Setup__c, IF( CSPOFA__Orchestration_Step__r.CSPOFA__Orchestration_Process__r.Order__c &lt;&gt; null, CSPOFA__Orchestration_Step__r.CSPOFA__Orchestration_Process__r.Order__r.Day_s_on_Setup__c  , 0) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days on Setup</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>