News UAT/force-app/main/default/objects/Activity/fields/Days_Taken_To_Complete__c.field-meta.xml
<CustomField>
    <fullName>Days_Taken_To_Complete__c</fullName>
    <formula>Completed_Date_Time__c - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Taken To Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>