News UAT/force-app/main/default/objects/Activity/fields/Days_to_Go_Live__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Go_Live__c</fullName>
    <formula>IF(CSPOFA__Orchestration_Step__r.CSPOFA__Orchestration_Process__r.Product_Order__c &lt;&gt; null,  CSPOFA__Orchestration_Step__r.CSPOFA__Orchestration_Process__r.Product_Order__r.Days_to_Go_Live__c ,  IF(CSPOFA__Orchestration_Step__r.CSPOFA__Orchestration_Process__r.Creative__c &lt;&gt; null,  CSPOFA__Orchestration_Step__r.CSPOFA__Orchestration_Process__r.Creative__r.Product_Order__r.Days_to_Go_Live__c,  IF( CSPOFA__Orchestration_Step__r.CSPOFA__Orchestration_Process__r.Order__c &lt;&gt; null, CSPOFA__Orchestration_Step__r.CSPOFA__Orchestration_Process__r.Order__r.Day_s_to_Go_Live__c, 0) )  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Go Live</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>