News UAT/force-app/main/default/objects/Activity/fields/In_My_Team__c.field-meta.xml
<CustomField>
    <fullName>In_My_Team__c</fullName>
    <formula>IF(Owner:User.UserRoleId  =  $User.UserRoleId,
			TRUE,
			FALSE
		)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In My Team</label>
    <type>Checkbox</type>
</CustomField>