News UAT/force-app/main/default/objects/Activity/fields/Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Notes__c</fullName>
    <description>Internal notes for appointments and other calendar events</description>
    <inlineHelpText>Internal notes for appointments and other calendar events</inlineHelpText>
    <label>Internal Notes</label>
    <type>TextArea</type>
</CustomField>