News UAT/force-app/main/default/objects/Activity/fields/Internal_Or_Client_QA__c.field-meta.xml
<CustomField>
    <fullName>Internal_Or_Client_QA__c</fullName>
    <description>This field will check whether, QA Check List is internal or Clients, based on the Name of QA Checklist</description>
    <formula>IF(CONTAINS(QA_Checklist__r.Name, &#39;Social&#39;), &#39;For Internal QAs&#39;,  IF(CONTAINS(QA_Checklist__r.Name, &#39;Client&#39;), &#39;For Client QAs&#39;, &#39;&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Or Client QA</label>
    <type>Text</type>
</CustomField>