News UAT/force-app/main/default/objects/Activity/fields/Item_Proposed_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Item_Proposed_Start_Date__c</fullName>
    <label>Item Proposed Start Date</label>
    <type>Date</type>
</CustomField>