News UAT/force-app/main/default/objects/Activity/fields/Number_of_Digital_Products__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Digital_Products__c</fullName>
    <description>The number of digital products the account manager has discussed with the customer at this appointment. 
This is manually populated by the user.</description>
    <inlineHelpText>Enter in the number of different digital products you have discussed with your customer at this appointment.</inlineHelpText>
    <label>Number of Digital Products</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>