News UAT/force-app/main/default/objects/Activity/fields/Number_of_Print_Products__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Print_Products__c</fullName>
    <description>The number of print products the account manager has discussed with the customer at this appointment. 
This is manually populated by the user.</description>
    <inlineHelpText>Enter the number of different print products you have discussed with your customer at this appointment.</inlineHelpText>
    <label>Number of Print Products</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>