News UAT/force-app/main/default/objects/Activity/fields/NVMTaskChannel__c.field-meta.xml
<CustomField>
    <fullName>NVMTaskChannel__c</fullName>
    <label>NVMTaskChannel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>