News UAT/force-app/main/default/objects/Activity/fields/Owner_Division__c.field-meta.xml
<CustomField>
    <fullName>Owner_Division__c</fullName>
    <formula>LEFT(Owner:User.UserRole.Name , FIND(&#39;-&#39;, Owner:User.UserRole.Name )-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Division</label>
    <type>Text</type>
</CustomField>