News UAT/force-app/main/default/objects/Activity/fields/Preferred_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Contact_Number__c</fullName>
    <label>Preferred Contact Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>