News UAT/force-app/main/default/objects/Activity/fields/Product_Node__c.field-meta.xml
<CustomField>
    <fullName>Product_Node__c</fullName>
    <formula>Product_Order__r.Product_Node__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Node</label>
    <type>Text</type>
</CustomField>