News UAT/force-app/main/default/objects/Activity/fields/Proposed_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Start_Date__c</fullName>
    <description>This field will be used by orchestrator task report</description>
    <formula>IF(CSPOFA__Orchestration_Step__r.CSPOFA__Orchestration_Process__r.Order__c &lt;&gt; null, CSPOFA__Orchestration_Step__r.CSPOFA__Orchestration_Process__r.Order__r.Proposed_Start_Date__c,IF(CSPOFA__Orchestration_Step__r.CSPOFA__Orchestration_Process__r.Product_Order__c &lt;&gt; null, CSPOFA__Orchestration_Step__r.CSPOFA__Orchestration_Process__r.Product_Order__r.Proposed_Start_Date__c,CSPOFA__Orchestration_Step__r.CSPOFA__Orchestration_Process__r.Creative__r.Product_Order__r.Proposed_Start_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposed Start Date</label>
    <type>Date</type>
</CustomField>