News UAT/force-app/main/default/objects/Activity/fields/QA_Checklist__c.field-meta.xml
<CustomField>
    <fullName>QA_Checklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QA Checklist</label>
    <referenceTo>QA_Checklist__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>