News UAT/force-app/main/default/objects/Activity/fields/Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Reviewed__c</fullName>
    <formula>NOT(ISNULL(Score__c))</formula>
    <label>Reviewed (Scorecards)</label>
    <type>Checkbox</type>
</CustomField>