News UAT/force-app/main/default/objects/Activity/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <description>@NXRIII-75</description>
    <formula>Campaign_Order__r.Sales_Order__r.Name_of_Sales_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Order</label>
    <type>Text</type>
</CustomField>