News UAT/force-app/main/default/objects/Activity/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Score (Agg)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>