News UAT/force-app/main/default/objects/Activity/fields/Task_Duration__c.field-meta.xml
<CustomField>
    <fullName>Task_Duration__c</fullName>
    <formula>CASE(MOD( DATEVALUE(Created_Date_Time__c) - DATE(1985,6,24),7), 
  0 , CASE( MOD( IF(ISBLANK(Completed_Date_Time__c),DATEVALUE(Completed_Date_Time__c),TODAY()) - DATEVALUE(Created_Date_Time__c) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( IF(ISBLANK(Completed_Date_Time__c),DATEVALUE(Completed_Date_Time__c),TODAY()) - DATEVALUE(Created_Date_Time__c) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( IF(ISBLANK(Completed_Date_Time__c),DATEVALUE(Completed_Date_Time__c),TODAY()) - DATEVALUE(Created_Date_Time__c) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( IF(ISBLANK(Completed_Date_Time__c),DATEVALUE(Completed_Date_Time__c),TODAY()) - DATEVALUE(Created_Date_Time__c) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( IF(ISBLANK(Completed_Date_Time__c),DATEVALUE(Completed_Date_Time__c),TODAY()) - DATEVALUE(Created_Date_Time__c) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( IF(ISBLANK(Completed_Date_Time__c),DATEVALUE(Completed_Date_Time__c),TODAY()) - DATEVALUE(Created_Date_Time__c) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( IF(ISBLANK(Completed_Date_Time__c),DATEVALUE(Completed_Date_Time__c),TODAY()) - DATEVALUE(Created_Date_Time__c) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( IF(ISBLANK(Completed_Date_Time__c),DATEVALUE(Completed_Date_Time__c),TODAY()) - DATEVALUE(Created_Date_Time__c) )/7)*5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>